--- a/content/電腦.html
+++ b/content/電腦.html
@@ -153,26 +153,14 @@ if ((location.href.search(/http:/) != -1) && (location.href.search(/login/) != -
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='參考資料.html'>Next</a> >> 參考資料<br /><h1>About</h1>
-<p>專題題目: </p>
-<p>強化學習在機電系統設計與控制中之應用 </p>
-<p>Application of reinforcement learning in design and control of mechatronic systems</p>
-<p>組員:</p>
-<p style="padding-left: 30px;">40723110</p>
-<p style="padding-left: 30px;">40723115</p>
-<p style="padding-left: 30px;">40723138</p>
-<p style="padding-left: 30px;">40723148</p>
-<p style="padding-left: 30px;">40723150</p>
-<hr/>
-<p>靜態網站: <a href="http://cad1.kmol.info">http://cad1.kmol.info</a></p>
-<p>這是最原始的 nginx 設定:</p>
-<p style="padding-left: 30px;"><a href="/nginx.conf.html">nginx.config.html</a></p>
-<p style="padding-left: 30px;"><a href="/default.html">default.html</a></p>
-<p>以下測試能否正常從 downloads 目錄直接擷取 pdf 檔案:</p>
-<p style="padding-left: 30px;"><a href="./../downloads/Deep Learning with Python.pdf">deep learning with python.pdf</a></p>
-<p>以下則是將 root 只到 /home/yen/cad1_site 目錄的設定:</p>
-<p style="padding-left: 30px;"><a href="/default_for_cmsimde.html">default_for_cmsimde.html</a></p>
-<br /> <a href='參考資料.html'>Next</a> >> 參考資料</div>
+    <div id="tipue_search_content">深度學習 << <a href='深度學習.html'>Previous</a> <a href='Flask.html'>Next</a> >> Flask<br /><h1>電腦</h1>
+<p><a href="https://drive.google.com/file/d/1AaOdJdZPNiD3YE5kgNcIrLK7ic0qsme1/view?usp=sharing">專題可攜 22GB.7z</a></p>
+<p>電腦輔助設計室 2016 更換的<a href="http://project.mde.tw/blog/yen-dian-nao-fu-zhu-she-ji-shi-dian-nao-pei-zhi.html">電腦硬體</a>:</p>
+<p>2016-2 協同設計室 6 台電腦</p>
+<p>Intel Core i7-6700 3.4 GHz Ram 16GB</p>
+<p>顯示卡 NVIDIA GeForce GTX 950 2GB 768 CUDA cores version 10.1</p>
+<p><a href="https://pytorch.org/get-started/locally/">安裝 Pytorch 指令</a>:</p>
+<pre>pip install torch==1.5.1+cu101 torchvision==0.6.1+cu101 -f <a href="https://download.pytorch.org/whl/torch_stable.html">https://download.pytorch.org/whl/torch_stable.html</a><br/><br/><a href="https://github.com/pytorch/examples">https://github.com/pytorch/examples</a><br/><a href="https://drive.google.com/file/d/1ke4bwuKZYeGArfQHwPfwTQSLTL3c-g-i/view?usp=sharing"><br/>Deep learning with python.pdf<br/><br/></a><a href="https://drive.google.com/file/d/1tofwQZBpb-cApownNTREDLgF-nd7WgoU/view?usp=sharing">Deep Learning with Pytorch.pdf</a> (<a href="https://pytorch.org/assets/deep-learning/Deep-Learning-with-PyTorch.pdf">來源</a>)</pre><br />深度學習 << <a href='深度學習.html'>Previous</a> <a href='Flask.html'>Next</a> >> Flask</div>
         
     <!-- footer -->
       <div class="container">
