add project design page

--- a/config/content.htm
+++ b/config/content.htm
@@ -17,7 +17,18 @@
 <p style="padding-left: 30px;"><a href="/downloads/Deep Learning with Python.pdf">deep learning with python.pdf</a></p>
 <p>以下則是將 root 只到 /home/yen/cad1_site 目錄的設定:</p>
 <p style="padding-left: 30px;"><a href="/default_for_cmsimde.html">default_for_cmsimde.html</a></p>
-<h2>參考資料</h2>
+<h2>專題定位</h2>
+<p>利用 <a href="https://cyberbotics.com/">Webots</a> 與 <a href="https://github.com/mdecourse/deepbots,">https://github.com/mdecourse/deepbots,</a> 透過 <a href="https://github.com/mdecourse/deepbots-tutorials">https://github.com/mdecourse/deepbots-tutorials</a> 與 <a href="https://github.com/mdecourse/deepworlds">https://github.com/mdecourse/deepworlds</a> 進一步了解 deepbots 如何應用在 Webots 中的受控系統.</p>
+<p>專題目的在探討與 <a href="http://mde.tw/arihockey">http://mde.tw/arihockey</a> 中虛實整合系統設計與控制有關的機器學習應用.</p>
+<p>下載 <a href="https://drive.google.com/file/d/1FtyX29EcFwqlZ0xgzTCJVVol3Y_A9XBk/view?usp=sharing">Webots_R2020brev1_portable.7z</a></p>
+<h4>參考資料:</h4>
+<p><a href="https://github.com/mdecourse/RL_Webots">https://github.com/mdecourse/RL_Webots</a> </p>
+<p><a href="https://drive.google.com/file/d/1fW0hZ24vqpDzuseVbZR60n9Z9-8MsP8c/view?usp=sharing">Deep Reinforcement Learning.pdf</a> (2019)</p>
+<p><a href="https://drive.google.com/file/d/1If9EQqkmaIR8nZwHmyYHyx15OKvES4pw/view?usp=sharing">2020_Book_DeepReinforcementLearning.pdf</a></p>
+<p><a href="https://drive.google.com/file/d/19irJA4Qchyew6XpucZPLYy5Nkyd7qQcF/view?usp=sharing">2019_Learning to Walk via Deep Reinforcement Learning</a></p>
+<p><a href="https://drive.google.com/file/d/1a6o4GEwX7YJAuqf4PisMJzUn0g_l21O4/view?usp=sharing">2016_3d_simulated_robot_manipulation_using_deep_reinforcement_learning.pdf</a></p>
+<p><a href="https://drive.google.com/file/d/11NfePzREpTGWD9aBGtjsrVWmRNma85hC/view?usp=sharing">2002_Book_HandbookOfMarkovDecisionProces.pdf</a></p>
+<p><a href="https://link.springer.com/chapter/10.1007/978-3-030-49186-4_6">Deepbots: A Webots-Based Deep Reinforcement Learning Framework for Robotics</a></p><h2>參考資料</h2>
 <ol>
 <li><a href="https://easyai.tech/en/blog/reinforcement-learning-with-python/">https://easyai.tech/en/blog/reinforcement-learning-with-python/</a></li>
 <li><a href="https://github.com/openai/gym">https://github.com/openai/gym</a></li>
