--- a/content/About.html
+++ b/content/About.html
@@ -142,7 +142,7 @@ if ((location.href.search(/http:/) != -1) && (location.href.search(/login/) != -
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li><a href='參考資料.html'>參考資料</a></li></ul><li class='has-children'><a href='動態網站.html'>動態網站</a><ul class='dropdown'><li><a href='數位簽章.html'>數位簽章</a></li></ul><li class='has-children'><a href='機電控制.html'>機電控制</a><ul class='dropdown'><li><a href='iRobot Create.html'>iRobot Create</a></li></ul><li class='has-children'><a href='深度學習.html'>深度學習</a><ul class='dropdown'><li><a href='電腦.html'>電腦</a><li><a href='Flask.html'>Flask</a></li></ul><li><a href='強化學習.html'>強化學習</a><li><a href='CMSiMDE.html'>CMSiMDE</a></li>
+                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li><a href='專題定位.html'>專題定位</a><li><a href='參考資料.html'>參考資料</a></li></ul><li class='has-children'><a href='動態網站.html'>動態網站</a><ul class='dropdown'><li><a href='數位簽章.html'>數位簽章</a></li></ul><li class='has-children'><a href='機電控制.html'>機電控制</a><ul class='dropdown'><li><a href='iRobot Create.html'>iRobot Create</a></li></ul><li class='has-children'><a href='深度學習.html'>深度學習</a><ul class='dropdown'><li><a href='電腦.html'>電腦</a><li><a href='Flask.html'>Flask</a></li></ul><li><a href='強化學習.html'>強化學習</a><li><a href='CMSiMDE.html'>CMSiMDE</a></li>
                       </ul>
                 </nav>
               </div>
@@ -153,7 +153,7 @@ if ((location.href.search(/http:/) != -1) && (location.href.search(/login/) != -
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='參考資料.html'>Next</a> >> 參考資料<br /><h1>About</h1>
+    <div id="tipue_search_content"> <a href='專題定位.html'>Next</a> >> 專題定位<br /><h1>About</h1>
 <p>專題題目: </p>
 <p>強化學習在機電系統設計與控制中之應用 </p>
 <p>Application of reinforcement learning in design and control of mechatronic systems</p>
@@ -172,7 +172,7 @@ if ((location.href.search(/http:/) != -1) && (location.href.search(/login/) != -
 <p style="padding-left: 30px;"><a href="./../downloads/Deep Learning with Python.pdf">deep learning with python.pdf</a></p>
 <p>以下則是將 root 只到 /home/yen/cad1_site 目錄的設定:</p>
 <p style="padding-left: 30px;"><a href="/default_for_cmsimde.html">default_for_cmsimde.html</a></p>
-<br /> <a href='參考資料.html'>Next</a> >> 參考資料</div>
+<br /> <a href='專題定位.html'>Next</a> >> 專題定位</div>
         
     <!-- footer -->
       <div class="container">
