add deep learning to solve pde

--- a/config/content.htm
+++ b/config/content.htm
@@ -156,6 +156,10 @@ sudo certbot renew --dry-run</pre>
 <p><a href="/downloads/CreateOpenInterface_v2.pdf">iRobot Create Open Interface v2.pdf</a></p>
 <p><a href="/downloads/AD41700_Arduino_iRobot_workshop.pdf">Use Arduino to control iRobot Create.pdf</a></p>
 <p><a href="/downloads/AD61600_Arduino_iRobot.pdf">Use Arduino to control iRobot Create_2.pdf</a></p><h1>深度學習</h1>
+<p><a href="/downloads/Solving Nonlinear andHigh-Dimensional PartialDifferential Equations viaDeep Learning.pdf">Solving Nonlinear andHigh-Dimensional PartialDifferential Equations viaDeep Learning.pdf</a></p>
+<p style="padding-left: 30px;"><a href="https://github.com/alialaradi/DeepGalerkinMethod">https://github.com/alialaradi/DeepGalerkinMethod</a> </p>
+<p><a href="/downloads/DGM A deep learning algorithm for solving partial differentialequations.pdf">DGM A deep learning algorithm for solving partial differentialequations.pdf</a></p>
+<p></p>
 <p><a href="https://cloud4scieng.org/">https://cloud4scieng.org/</a> 雲端運算</p>
 <p><a href="https://www.uio.no/studier/emner/matnat/ifi/IN5400/v20/material/week1/">https://www.uio.no/studier/emner/matnat/ifi/IN5400/v20/material/week1/</a></p>
 <p><a href="https://wcm.kmol.info:8443">https://wcm.kmol.info:8443</a> (KMOLer only)</p>
