--- a/content/深度學習.html
+++ b/content/深度學習.html
@@ -154,6 +154,10 @@ if ((location.href.search(/http:/) != -1) && (location.href.search(/login/) != -
           
         </header>
     <div id="tipue_search_content">iRobot Create << <a href='iRobot Create.html'>Previous</a> <a href='電腦.html'>Next</a> >> 電腦<br /><h1>深度學習</h1>
+<p><a href="./../downloads/Solving Nonlinear andHigh-Dimensional PartialDifferential Equations viaDeep Learning.pdf">Solving Nonlinear andHigh-Dimensional PartialDifferential Equations viaDeep Learning.pdf</a></p>
+<p style="padding-left: 30px;"><a href="https://github.com/alialaradi/DeepGalerkinMethod">https://github.com/alialaradi/DeepGalerkinMethod</a> </p>
+<p><a href="./../downloads/DGM A deep learning algorithm for solving partial differentialequations.pdf">DGM A deep learning algorithm for solving partial differentialequations.pdf</a></p>
+<p></p>
 <p><a href="https://cloud4scieng.org/">https://cloud4scieng.org/</a> 雲端運算</p>
 <p><a href="https://www.uio.no/studier/emner/matnat/ifi/IN5400/v20/material/week1/">https://www.uio.no/studier/emner/matnat/ifi/IN5400/v20/material/week1/</a></p>
 <p><a href="https://wcm.kmol.info:8443">https://wcm.kmol.info:8443</a> (KMOLer only)</p>
