--- a/content/Flutter.html
+++ b/content/Flutter.html
@@ -153,20 +153,14 @@ if ((location.href.search(/http:/) != -1) && (location.href.search(/login/) != -
           </div>
           
         </header>
-    <div id="tipue_search_content">動態網站 << <a href='動態網站.html'>Previous</a> <a href='機電控制.html'>Next</a> >> 機電控制<br /><h1>數位簽章</h1>
-<p><a href="https://letsencrypt.org/">https://letsencrypt.org/</a></p>
-<p><a href="https://certbot.eff.org/lets-encrypt/ubuntufocal-nginx">https://certbot.eff.org/lets-encrypt/ubuntufocal-nginx</a> </p>
-<pre class="brush:js;auto-links:false;toolbar:false" contenteditable="false">sudo apt-get update
-sudo apt-get install software-properties-common
-sudo add-apt-repository universe
-sudo apt-get update
-
-sudo apt-get install certbot python3-certbot-nginx
-
-sudo certbot certonly --nginx
-
-sudo certbot renew --dry-run</pre>
-<p></p><br />動態網站 << <a href='動態網站.html'>Previous</a> <a href='機電控制.html'>Next</a> >> 機電控制</div>
+    <div id="tipue_search_content">Reference << <a href='Reference.html'>Previous</a> <a href='CMSiMDE.html'>Next</a> >> CMSiMDE<br /><h1>Flutter</h1>
+<p>Flutter 與 Android sdk 版本差異問題解決: <a href="https://stackoverflow.com/questions/60440509/android-command-line-tools-sdkmanager-always-shows-warning-could-not-create-se/61613986#61613986">https://stackoverflow.com/questions/60440509/android-command-line-tools-sdkmanager-always-shows-warning-could-not-create-se/61613986#61613986</a></p>
+<p>Flask 與 ML 系統在後端, Flutter 作為前端</p>
+<p><a href="https://medium.com/analytics-vidhya/deploy-ml-models-using-flask-as-rest-api-and-access-via-flutter-app-7ce63d5c1f3b">https://medium.com/analytics-vidhya/deploy-ml-models-using-flask-as-rest-api-and-access-via-flutter-app-7ce63d5c1f3b</a></p>
+<p><a href="https://medium.com/@pyzimos/flutter-chatbot-with-python-flask-backend-heroku-deployment-706baafbb8f1">https://medium.com/@pyzimos/flutter-chatbot-with-python-flask-backend-heroku-deployment-706baafbb8f1</a></p>
+<p><a href="https://github.com/SHARONZACHARIA/Deploy-ML-model">https://github.com/SHARONZACHARIA/Deploy-ML-model</a></p>
+<p><a href="https://github.com/tonynguyen72/Flask_API_Flutter">https://github.com/tonynguyen72/Flask_API_Flutter</a></p>
+<p><a href="https://github.com/mohammedhashim44/Flutter-Flask-Login">https://github.com/mohammedhashim44/Flutter-Flask-Login</a></p><br />Reference << <a href='Reference.html'>Previous</a> <a href='CMSiMDE.html'>Next</a> >> CMSiMDE</div>
         
     <!-- footer -->
       <div class="container">
