--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -157,6 +157,7 @@ sudo certbot renew --dry-run</pre>
 <p><a href="/downloads/AD41700_Arduino_iRobot_workshop.pdf">Use Arduino to control iRobot Create.pdf</a></p>
 <p><a href="/downloads/AD61600_Arduino_iRobot.pdf">Use Arduino to control iRobot Create_2.pdf</a></p><h1>深度學習</h1>
 <p><a href="/downloads/Solving Nonlinear andHigh-Dimensional PartialDifferential Equations viaDeep Learning.pdf">Solving Nonlinear andHigh-Dimensional PartialDifferential Equations viaDeep Learning.pdf</a></p>
+<p style="padding-left: 30px;"><a href="https://github.com/alialaradi/DeepGalerkinMethod">https://github.com/alialaradi/DeepGalerkinMethod</a> </p>
 <p><a href="/downloads/DGM A deep learning algorithm for solving partial differentialequations.pdf">DGM A deep learning algorithm for solving partial differentialequations.pdf</a></p>
 <p></p>
 <p><a href="https://cloud4scieng.org/">https://cloud4scieng.org/</a> 雲端運算</p>
@@ -482,7 +483,13 @@ class _ImageInput extends State&lt;ImageInput&gt; {
 <p><a href="/downloads/2018_Curved Path Following with Deep Reinforcement Learning-Results from Three Vessel Models.pdf">2018_Curved Path Following with Deep Reinforcement Learning-Results from Three Vessel Models.pdf</a></p>
 <p><a href="/downloads/2019_Application of deep reinforcement learning for control problems.pdf">2019_Application of deep reinforcement learning for control problems.pdf</a></p>
 <p><a href="/downloads/2018_Path Following in Simulated Environments using the A3C Reinforcement Learning Method.pdf">2018_Path Following in Simulated Environments using the A3C Reinforcement Learning Method.pdf</a></p>
-<p><a href="/downloads/FlashRL_A Reinforcement Learning Platform.pdf">FlashRL_A Reinforcement Learning Platform.pdf</a></p><h1>CMSiMDE</h1>
+<p><a href="/downloads/FlashRL_A Reinforcement Learning Platform.pdf">FlashRL_A Reinforcement Learning Platform.pdf</a></p><h1>Flutter</h1>
+<p>Flask 與 ML 系統在後端, Flutter 作為前端</p>
+<p><a href="https://medium.com/analytics-vidhya/deploy-ml-models-using-flask-as-rest-api-and-access-via-flutter-app-7ce63d5c1f3b">https://medium.com/analytics-vidhya/deploy-ml-models-using-flask-as-rest-api-and-access-via-flutter-app-7ce63d5c1f3b</a> </p>
+<p><a href="https://medium.com/@pyzimos/flutter-chatbot-with-python-flask-backend-heroku-deployment-706baafbb8f1">https://medium.com/@pyzimos/flutter-chatbot-with-python-flask-backend-heroku-deployment-706baafbb8f1</a> </p>
+<p><a href="https://github.com/SHARONZACHARIA/Deploy-ML-model">https://github.com/SHARONZACHARIA/Deploy-ML-model</a> </p>
+<p><a href="https://github.com/tonynguyen72/Flask_API_Flutter">https://github.com/tonynguyen72/Flask_API_Flutter</a> </p>
+<p><a href="https://github.com/mohammedhashim44/Flutter-Flask-Login">https://github.com/mohammedhashim44/Flutter-Flask-Login</a> </p><h1>CMSiMDE</h1>
 <p><a href="https://websitesetup.org/bootstrap-tutorial-for-beginners/">https://websitesetup.org/bootstrap-tutorial-for-beginners/</a></p>
 <p><a href="https://colorlib.com/wp/themes/travelify/">https://colorlib.com/wp/themes/travelify/</a> </p>
 <p><a href="https://github.com/puikinsh/travelify">https://github.com/puikinsh/travelify</a></p>
