--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -599,6 +599,7 @@ class _ImageInput extends State&lt;ImageInput&gt; {
 <p><a href="/downloads/Proximal Policy Optimization Algorithms.pdf">Proximal Policy Optimization Algorithms.pdf</a> ( 近端策略優化原理)</p>
 <p><a href="https://pytorch.org/tutorials/intermediate/reinforcement_q_learning.html">https://pytorch.org/tutorials/intermediate/reinforcement_q_learning.html</a></p>
 <p><a href="https://www.mlq.ai/deep-reinforcement-learning-pytorch-implementation/">https://www.mlq.ai/deep-reinforcement-learning-pytorch-implementation/</a></p><h2>2021</h2>
+<p>need Python and Node.js and Typescript</p>
 <p><a href="https://github.com/Positronic-IO/air-hockey-training-environment">https://github.com/Positronic-IO/air-hockey-training-environment</a> </p>
 <p><a href="https://github.com/Positronic-IO/air-hockey-web-ui">https://github.com/Positronic-IO/air-hockey-web-ui</a> </p>
 <p><a href="https://jonathan-hui.medium.com/rl-dqn-deep-q-network-e207751f7ae4">https://jonathan-hui.medium.com/rl-dqn-deep-q-network-e207751f7ae4</a> </p>
