--- a/content/專題定位.html
+++ b/content/專題定位.html
@@ -154,6 +154,8 @@ if ((location.href.search(/http:/) != -1) && (location.href.search(/login/) != -
           
         </header>
     <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='LaTeX.html'>Next</a> >> LaTeX<br /><h1>專題定位</h1>
+<p>2021/01/08</p>
+<p><a href="./../downloads/2017_An overview of gradient descent optimizationalgorithms.pdf">/downloads/2017_An overview of gradient descent optimizationalgorithms.pdf</a></p>
 <p>利用 <a href="https://cyberbotics.com/">Webots</a> 與 <a href="https://github.com/mdecourse/deepbots,">https://github.com/mdecourse/deepbots,</a> 透過 <a href="https://github.com/mdecourse/deepbots-tutorials">https://github.com/mdecourse/deepbots-tutorials</a> 與 <a href="https://github.com/mdecourse/deepworlds">https://github.com/mdecourse/deepworlds</a> 進一步了解 deepbots 如何應用在 Webots 中的受控系統.</p>
 <p>專題目的在探討與 <a href="http://mde.tw/airhockey">http://mde.tw/airhockey</a> (<a href="https://github.com/mdecourse/airhockey">https://github.com/mdecourse/airhockey </a>)中虛實整合系統設計與控制有關的機器學習應用.</p>
 <p>下載 <a href="https://drive.google.com/file/d/1FtyX29EcFwqlZ0xgzTCJVVol3Y_A9XBk/view?usp=sharing">Webots_R2020brev1_portable.7z</a></p>
@@ -164,8 +166,7 @@ if ((location.href.search(/http:/) != -1) && (location.href.search(/login/) != -
 <p><a href="https://drive.google.com/file/d/19irJA4Qchyew6XpucZPLYy5Nkyd7qQcF/view?usp=sharing">2019_Learning to Walk via Deep Reinforcement Learning</a></p>
 <p><a href="https://drive.google.com/file/d/1a6o4GEwX7YJAuqf4PisMJzUn0g_l21O4/view?usp=sharing">2016_3d_simulated_robot_manipulation_using_deep_reinforcement_learning.pdf</a></p>
 <p><a href="https://drive.google.com/file/d/11NfePzREpTGWD9aBGtjsrVWmRNma85hC/view?usp=sharing">2002_Book_HandbookOfMarkovDecisionProces.pdf</a></p>
-<p><a href="https://link.springer.com/chapter/10.1007/978-3-030-49186-4_6">Deepbots: A Webots-Based Deep Reinforcement Learning Framework for Robotics</a></p>
-<br />About << <a href='About.html'>Previous</a> <a href='LaTeX.html'>Next</a> >> LaTeX</div>
+<p><a href="https://link.springer.com/chapter/10.1007/978-3-030-49186-4_6">Deepbots: A Webots-Based Deep Reinforcement Learning Framework for Robotics</a></p><br />About << <a href='About.html'>Previous</a> <a href='LaTeX.html'>Next</a> >> LaTeX</div>
         
     <!-- footer -->
       <div class="container">
