--- a/content/專題定位.html
+++ b/content/專題定位.html
@@ -160,6 +160,10 @@ if ((location.href.search(/http:/) != -1) && (location.href.search(/login/) != -
 <p style="padding-left: 30px;">Adam: <a href="./../downloads/2015_ADAM A METHOD  FORSTOCHASTICOPTIMIZATION.pdf">2015_ADAM A METHOD FORSTOCHASTICOPTIMIZATION.pdf</a></p>
 <p style="padding-left: 30px;"><a href="./../downloads/2017_An overview of gradient descent optimizationalgorithms.pdf">2017_An overview of gradient descent optimizationalgorithms.pdf</a></p>
 <p style="padding-left: 30px;"><a href="./../downloads/2018_A Comparative Analysis of Gradient Descent-Based Optimization Algorithms on Convolutional Neural Networks.pdf">2018_A Comparative Analysis of Gradient Descent-Based Optimization Algorithms on Convolutional Neural Networks.pdf</a></p>
+<p style="padding-left: 30px;">第一組的理論與程式應用到第三組平面機構合成:</p>
+<p style="padding-left: 30px;"><a href="./../downloads/2015_Dimensional synthesis of mechanical linkages usingartificial neural networks and Fourier descriptors.pdf">2015_Dimensional synthesis of mechanical linkages usingartificial neural networks and Fourier descriptors.pdf</a></p>
+<p style="padding-left: 30px;"><a href="./../downloads/2017_Four-Bar Linkage Synthesis Using Non-ConvexOptimization.pdf">2017_Four-Bar Linkage Synthesis Using Non-ConvexOptimization.pdf</a></p>
+<p style="padding-left: 30px;"><a href="./../downloads/2018_Synthesis of a novel planar linkage to visit up to eight poses.pdf">2018_Synthesis of a novel planar linkage to visit up to eight poses.pdf</a></p>
 <p></p>
 <p>利用 <a href="https://cyberbotics.com/">Webots</a> 與 <a href="https://github.com/mdecourse/deepbots,">https://github.com/mdecourse/deepbots,</a> 透過 <a href="https://github.com/mdecourse/deepbots-tutorials">https://github.com/mdecourse/deepbots-tutorials</a> 與 <a href="https://github.com/mdecourse/deepworlds">https://github.com/mdecourse/deepworlds</a> 進一步了解 deepbots 如何應用在 Webots 中的受控系統.</p>
 <p>專題目的在探討與 <a href="http://mde.tw/airhockey">http://mde.tw/airhockey</a> (<a href="https://github.com/mdecourse/airhockey">https://github.com/mdecourse/airhockey </a>)中虛實整合系統設計與控制有關的機器學習應用.</p>
