update cmsimde and add github discussion

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -24,6 +24,10 @@
 <p style="padding-left: 30px;">Adam: <a href="/downloads/2015_ADAM A METHOD  FORSTOCHASTICOPTIMIZATION.pdf">2015_ADAM A METHOD FORSTOCHASTICOPTIMIZATION.pdf</a></p>
 <p style="padding-left: 30px;"><a href="/downloads/2017_An overview of gradient descent optimizationalgorithms.pdf">2017_An overview of gradient descent optimizationalgorithms.pdf</a></p>
 <p style="padding-left: 30px;"><a href="/downloads/2018_A Comparative Analysis of Gradient Descent-Based Optimization Algorithms on Convolutional Neural Networks.pdf">2018_A Comparative Analysis of Gradient Descent-Based Optimization Algorithms on Convolutional Neural Networks.pdf</a></p>
+<p style="padding-left: 30px;">第一組的理論與程式應用到第三組平面機構合成:</p>
+<p style="padding-left: 30px;"><a href="/downloads/2015_Dimensional synthesis of mechanical linkages usingartificial neural networks and Fourier descriptors.pdf">2015_Dimensional synthesis of mechanical linkages usingartificial neural networks and Fourier descriptors.pdf</a></p>
+<p style="padding-left: 30px;"><a href="/downloads/2017_Four-Bar Linkage Synthesis Using Non-ConvexOptimization.pdf">2017_Four-Bar Linkage Synthesis Using Non-ConvexOptimization.pdf</a></p>
+<p style="padding-left: 30px;"><a href="/downloads/2018_Synthesis of a novel planar linkage to visit up to eight poses.pdf">2018_Synthesis of a novel planar linkage to visit up to eight poses.pdf</a></p>
 <p></p>
 <p>利用 <a href="https://cyberbotics.com/">Webots</a> 與 <a href="https://github.com/mdecourse/deepbots,">https://github.com/mdecourse/deepbots,</a> 透過 <a href="https://github.com/mdecourse/deepbots-tutorials">https://github.com/mdecourse/deepbots-tutorials</a> 與 <a href="https://github.com/mdecourse/deepworlds">https://github.com/mdecourse/deepworlds</a> 進一步了解 deepbots 如何應用在 Webots 中的受控系統.</p>
 <p>專題目的在探討與 <a href="http://mde.tw/airhockey">http://mde.tw/airhockey</a> (<a href="https://github.com/mdecourse/airhockey">https://github.com/mdecourse/airhockey </a>)中虛實整合系統設計與控制有關的機器學習應用.</p>
@@ -260,14 +264,13 @@ sudo certbot certonly --nginx
 
 sudo certbot renew --dry-run</pre>
 <p></p>
-<h1>機電控制</h1>
+<h2>機電控制</h2>
 <p>Mechatronic system control</p>
 <h4>控制卡:</h4>
 <p style="padding-left: 30px;">Arduino</p>
 <p style="padding-left: 30px;">Raspberry Pi</p>
 <h4>機電系統:</h4>
-<p style="padding-left: 30px;">iRobot Create</p>
-<h2>iRobot Create</h2>
+<p style="padding-left: 30px;">iRobot Create</p><h2>iRobot Create</h2>
 <p><a href="https://www.cyberbotics.com/doc/guide/create">https://www.cyberbotics.com/doc/guide/create</a></p>
 <p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/dEgLYioQycA" width="560"></iframe></p>
 <p><a href="https://github.com/mgobryan/pycreate">https://github.com/mgobryan/pycreate</a> </p>
@@ -616,9 +619,9 @@ class _ImageInput extends State&lt;ImageInput&gt; {
 <p><a href="/downloads/2018_Curved Path Following with Deep Reinforcement Learning-Results from Three Vessel Models.pdf">2018_Curved Path Following with Deep Reinforcement Learning-Results from Three Vessel Models.pdf</a></p>
 <p><a href="/downloads/2019_Application of deep reinforcement learning for control problems.pdf">2019_Application of deep reinforcement learning for control problems.pdf</a></p>
 <p><a href="/downloads/2018_Path Following in Simulated Environments using the A3C Reinforcement Learning Method.pdf">2018_Path Following in Simulated Environments using the A3C Reinforcement Learning Method.pdf</a></p>
-<p><a href="/downloads/FlashRL_A Reinforcement Learning Platform.pdf">FlashRL_A Reinforcement Learning Platform.pdf</a></p><h1>類神經網路學習</h1>
+<p><a href="/downloads/FlashRL_A Reinforcement Learning Platform.pdf">FlashRL_A Reinforcement Learning Platform.pdf</a></p><h2>類神經網路學習</h2>
 <p><a href="https://drive.google.com/file/d/1yc0WjEN33IKjgmZZlxO5LcT--qkDRZXu/view">nn_and_air_hockey.7z</a></p>
-<p>將 <a href="https://github.com/Purusharth07/Ping-Pong-Neural-Game-">https://github.com/Purusharth07/Ping-Pong-Neural-Game-</a>  改為 <a href="https://drive.google.com/file/d/1ZfkzhZBLRQSuKYsaKO2UPOC3ZvV9KaiC/view">tensorflow 2.0</a> 版本, 使用 Pygame 模擬.</p><h2>neural_network_in_python.pdf</h2>
+<p>將 <a href="https://github.com/Purusharth07/Ping-Pong-Neural-Game-">https://github.com/Purusharth07/Ping-Pong-Neural-Game-</a>  改為 <a href="https://drive.google.com/file/d/1ZfkzhZBLRQSuKYsaKO2UPOC3ZvV9KaiC/view">tensorflow 2.0</a> 版本, 使用 Pygame 模擬.</p><h3>neural_network_in_python.pdf</h3>
 <p>說明前三章的程式碼</p>
 <h4>2LayerNeuralNetwork.py</h4>
 <p><span>origin </span>codes:</p>
@@ -808,15 +811,15 @@ y = np.array(([1], [0], [0], [0], [0], [0], [0], [1]), dtype=float)</pre>
 <p>Epochs(疊代次數，feedForward+backprogation運算完算一次疊代)</p>
 <pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false"># 訓練疊代次數
 trainingEpochs = 1000</pre>
-<p></p><h1>Flutter</h1>
+<p></p><h1>Reference</h1>
+<h2>Flutter</h2>
 <p>Flutter 與 Android sdk 版本差異問題解決: <a href="https://stackoverflow.com/questions/60440509/android-command-line-tools-sdkmanager-always-shows-warning-could-not-create-se/61613986#61613986">https://stackoverflow.com/questions/60440509/android-command-line-tools-sdkmanager-always-shows-warning-could-not-create-se/61613986#61613986</a></p>
 <p>Flask 與 ML 系統在後端, Flutter 作為前端</p>
 <p><a href="https://medium.com/analytics-vidhya/deploy-ml-models-using-flask-as-rest-api-and-access-via-flutter-app-7ce63d5c1f3b">https://medium.com/analytics-vidhya/deploy-ml-models-using-flask-as-rest-api-and-access-via-flutter-app-7ce63d5c1f3b</a></p>
 <p><a href="https://medium.com/@pyzimos/flutter-chatbot-with-python-flask-backend-heroku-deployment-706baafbb8f1">https://medium.com/@pyzimos/flutter-chatbot-with-python-flask-backend-heroku-deployment-706baafbb8f1</a></p>
 <p><a href="https://github.com/SHARONZACHARIA/Deploy-ML-model">https://github.com/SHARONZACHARIA/Deploy-ML-model</a></p>
 <p><a href="https://github.com/tonynguyen72/Flask_API_Flutter">https://github.com/tonynguyen72/Flask_API_Flutter</a></p>
-<p><a href="https://github.com/mohammedhashim44/Flutter-Flask-Login">https://github.com/mohammedhashim44/Flutter-Flask-Login</a></p>
-<h1>CMSiMDE</h1>
+<p><a href="https://github.com/mohammedhashim44/Flutter-Flask-Login">https://github.com/mohammedhashim44/Flutter-Flask-Login</a></p><h1>CMSiMDE</h1>
 <p><a href="https://websitesetup.org/bootstrap-tutorial-for-beginners/">https://websitesetup.org/bootstrap-tutorial-for-beginners/</a></p>
 <p><a href="https://colorlib.com/wp/themes/travelify/">https://colorlib.com/wp/themes/travelify/</a> </p>
 <p><a href="https://github.com/puikinsh/travelify">https://github.com/puikinsh/travelify</a></p>
