move duplicate reference to ref

--- a/config/content.htm
+++ b/config/content.htm
@@ -811,8 +811,7 @@ y = np.array(([1], [0], [0], [0], [0], [0], [0], [1]), dtype=float)</pre>
 <p>Epochs(疊代次數，feedForward+backprogation運算完算一次疊代)</p>
 <pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false"># 訓練疊代次數
 trainingEpochs = 1000</pre>
-<p></p><h1>Reference</h1>
-<h2>Flutter</h2>
+<p></p><h1>Ref</h1><h2>Flutter</h2>
 <p>Flutter 與 Android sdk 版本差異問題解決: <a href="https://stackoverflow.com/questions/60440509/android-command-line-tools-sdkmanager-always-shows-warning-could-not-create-se/61613986#61613986">https://stackoverflow.com/questions/60440509/android-command-line-tools-sdkmanager-always-shows-warning-could-not-create-se/61613986#61613986</a></p>
 <p>Flask 與 ML 系統在後端, Flutter 作為前端</p>
 <p><a href="https://medium.com/analytics-vidhya/deploy-ml-models-using-flask-as-rest-api-and-access-via-flutter-app-7ce63d5c1f3b">https://medium.com/analytics-vidhya/deploy-ml-models-using-flask-as-rest-api-and-access-via-flutter-app-7ce63d5c1f3b</a></p>
